[package]
name = "ss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
webbrowser = "0.8.1"
anyhow = "1.0.40"
tokio = { version = "1", features = ["full"] }
dirs = "4.0.0"
serde = "1.0"
serde_yaml = "0.9"
