[package]
name = "r-ss"
version = "0.1.1"
edition = "2021"
authors = ["sunlee", "zx"]
license = "MIT"
description = "a tool to quickly open your search website"
readme = "README.md"
keywords = ["cli", "search", "website"]
homepage = "https://github.com/hildxd/rss"
repository = "https://github.com/hildxd/rss"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
webbrowser = "0.8.1"
anyhow = "1.0.40"
tokio = { version = "1", features = ["full"] }
dirs = "4.0.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
